Modularization during runtime with Maven